fixed testing bug